Here is the error: /usr/src/sys/kern/subr_intr.c:1041:49: error: use of undeclared identifier 'irq' debugf("irq %u add handler error %d on %s\n", irq, error, name); ^ 1 error generated.
A commit references this bug: Author: ian Date: Wed Aug 16 16:51:55 UTC 2017 New revision: 322580 URL: https://svnweb.freebsd.org/changeset/base/322580 Log: Fix compile error with option DEBUG. This is fallout from some long-ago INTRNG refactoring that didn't get caught at the time because code in a debugf() statement isn't compiled unless DEBUG is defined. PR: 221557 Changes: head/sys/kern/subr_intr.c
Thank you Ian.
A commit references this bug: Author: ian Date: Mon Sep 11 22:32:38 UTC 2017 New revision: 323469 URL: https://svnweb.freebsd.org/changeset/base/323469 Log: MFC r322580: Fix compile error with option DEBUG. This is fallout from some long-ago INTRNG refactoring that didn't get caught at the time because code in a debugf() statement isn't compiled unless DEBUG is defined. PR: 221557 Changes: _U stable/11/ stable/11/sys/kern/subr_intr.c