Fix compile error with option DEBUG.  This is fallout from some long-ago INTRNG refactoring that didn't get caught at the time because code in a debugf() statement isn't compiled unless DEBUG is defined.

PR:		221557

Former-commit-id: 133e192032dd58c5c140551d131bb440d70855a7